--- a/ScoutingCollection/ScoutingCollection/ScoutingCollection.csproj
+++ b/ScoutingCollection/ScoutingCollection/ScoutingCollection.csproj
@@ -44,8 +44,17 @@
     <Compile Include="PitScouting.xaml.cs">
       <DependentUpon>PitScouting.xaml</DependentUpon>
     </Compile>
+    <Compile Include="PitScoutingAuto.xaml.cs">
+      <DependentUpon>PitScoutingAuto.xaml</DependentUpon>
+    </Compile>
     <Compile Include="PitScoutingGeneral.xaml.cs">
       <DependentUpon>PitScoutingGeneral.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="PitScoutingReport.xaml.cs">
+      <DependentUpon>PitScoutingReport.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="PitScoutingTeleOp.xaml.cs">
+      <DependentUpon>PitScoutingTeleOp.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -81,6 +90,24 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="PitScoutingGeneral.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="PitScoutingAuto.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="PitScoutingTeleOp.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="PitScoutingReport.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <SubType>Designer</SubType>
     </EmbeddedResource>
