--- a/ScoutingCollection/ScoutingCollection/ScoutingCollection.csproj
+++ b/ScoutingCollection/ScoutingCollection/ScoutingCollection.csproj
@@ -56,6 +56,7 @@
     <Compile Include="PitScoutingTeleOp.xaml.cs">
       <DependentUpon>PitScoutingTeleOp.xaml</DependentUpon>
     </Compile>
+    <Compile Include="PitScoutingViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
