--- a/ScoutingCollection/ScoutingCollection/ScoutingCollection.csproj
+++ b/ScoutingCollection/ScoutingCollection/ScoutingCollection.csproj
@@ -42,6 +42,9 @@
       <DependentUpon>MatchScoutAutoPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="MatchVM.cs" />
+    <Compile Include="PostMatchScoutPage.xaml.cs">
+      <DependentUpon>PostMatchScoutPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="ReportsListView.xaml.cs">
       <DependentUpon>ReportsListView.xaml</DependentUpon>
     </Compile>
@@ -142,6 +145,12 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="MatchScoutAutoPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="PostMatchScoutPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <SubType>Designer</SubType>
     </EmbeddedResource>
