--- a/ScoutingCollection/ScoutingCollection.UWP/project.json
+++ b/ScoutingCollection/ScoutingCollection.UWP/project.json
@@ -3,7 +3,8 @@
     "Microsoft.AppCenter.Analytics": "1.0.1",
     "Microsoft.AppCenter.Crashes": "1.0.1",
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.2.2",
-    "Xamarin.Forms": "2.3.4.224"
+    "PCLStorage": "1.0.2",
+    "Xamarin.Forms": "2.5.0.91635"
   },
   "frameworks": {
     "uap10.0.10586": {}
