--- a/ScoutingCollection/ScoutingCollection.iOS/packages.config
+++ b/ScoutingCollection/ScoutingCollection.iOS/packages.config
@@ -3,5 +3,6 @@
   <package id="Microsoft.AppCenter" version="1.0.1" targetFramework="xamarinios10" />
   <package id="Microsoft.AppCenter.Analytics" version="1.0.1" targetFramework="xamarinios10" />
   <package id="Microsoft.AppCenter.Crashes" version="1.0.1" targetFramework="xamarinios10" />
-  <package id="Xamarin.Forms" version="2.3.4.247" targetFramework="xamarinios10" />
+  <package id="PCLStorage" version="1.0.2" targetFramework="xamarinios10" />
+  <package id="Xamarin.Forms" version="2.5.0.91635" targetFramework="xamarinios10" />
 </packages>
