--- a/ScoutingCollection/ScoutingCollection.Android/packages.config
+++ b/ScoutingCollection/ScoutingCollection.Android/packages.config
@@ -4,6 +4,7 @@
   <package id="Microsoft.AppCenter.Analytics" version="1.0.1" targetFramework="monoandroid71" />
   <package id="Microsoft.AppCenter.Crashes" version="1.0.1" targetFramework="monoandroid71" />
   <package id="PCLStorage" version="1.0.2" targetFramework="monoandroid71" />
+  <package id="Xam.Plugins.Messaging" version="5.0.0" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="25.4.0.2" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.Annotations" version="25.4.0.2" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.Compat" version="25.4.0.2" targetFramework="monoandroid71" />
